<resources>
    <string name="app_name">My Coffee Capsules</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="data_imported" translatable="false">com.paocorp.mycoffeecapsules.mhImportedData</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="capsulesQty">%1$d capsules in stock</string>
    <string name="capsulesTitle">%1$s Capsules in stock</string>
    <string name="deleteTitle">Delete %1$s capsules</string>
    <string name="deleteInfo">Are you sure you want to delete this capsule ?\n This action cannot be undone.</string>
    <string name="rate_app">Noter cette application</string>
    <string name="order">Order Nespresso Capsules</string>
    <string name="share">Share</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="fb_ContentDesc">I use this app to inventory my coffee capsules.</string>

    <string name="intenso">Intenso</string>
    <string name="espresso">Espresso</string>
    <string name="lungo">Lungo</string>
    <string name="decaffeinato">Decaffeinato</string>
    <string name="pureOrigin">Pure Origin</string>
    <string name="variations">Variations</string>
    <string name="variations_limited">Variations Limited Edition</string>
    <string name="search">Search a capsule</string>

    <string name="interstitial" translatable="false">ca-app-pub-2669557761715669/1242375637</string>
    <string name="bann" translatable="false">ca-app-pub-2669557761715669/4195842034</string>
    <string name="store_url" translatable="false">https://play.google.com/store/apps/details?id=com.paocorp.mycoffeecapsules</string>
    <string name="site_url" translatable="false">paocorp.com</string>
    <string name="order_url">https://www.nespresso.com/mobile/uk/en/catalog</string>
    <string name="facebook_app_id" translatable="false">914409908597657</string>
    <string name="app_icon_url" translatable="false">https://paocorp.com/res/images/ico/mycoffeecapsules.png</string>
    <string name="banner_bottom" translatable="false">ca-app-pub-2669557761715669/4195842034</string>
    <string name="no_results">No results matching this request</string>
    <string name="daily_conso">Daily consumption of %1$s</string>
    <string name="consoPreview">You will run out of %1$s around %2$s</string>
    <string name="consoOut">You will be short of %1$s tomorrow</string>
    <string name="addCapsules">Add custom capsules</string>
    <string name="customCapsules">Custom capsules</string>
    <string name="capsuleName">Capsule Name</string>
    <string name="nameEmpty">Capsule name cannot be empty</string>
    <string name="exportCapsules">Export capsules data to Excel format</string>
    <string name="colName">Capsule Name</string>
    <string name="colQty">Amount</string>
    <string name="colConso">Daily consumption</string>
    <string name="colType">Type name</string>
    <string name="permissionDenied">Storage permission denied</string>
    <string name="check">Check</string>
    <string name="exportSuccess">Data exported correctly</string>
    <string name="see">See</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="gold">Gold</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="violet">Purple</string>
    <string name="capColor">Capsule color :</string>
    <string name="brown">Brown</string>
    <string name="zero" translatable="false">0</string>
    <string name="plus10" translatable="false">+10</string>
    <string name="plus50" translatable="false">+50</string>
    <string name="plus100" translatable="false">+100</string>

    <string name="billingKey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtG+x0PNDk7CgvdyEUBt7DXy7VAUxa3HFFdhlh0AwL6RbLMm37vM7lDppFCRksKNU0Ag4Vah0Keybk73HgKjTnvI40ieJFB1P8osMoAyI96D76oHy+QvGq7mTxgImaN3gnUGBn2YTHbVpxt4jXDxftn8/+YvYHeNqY8KcA0Qg648IBizB8B7Z0U4aslzEw+T3JzwajIld2O1AAEiqRskC1uFr7W6lqUVJVq+wgFEOjeZARBWPXYvfh48WZ2DdflYeZMWJK4RoPXSkYj/P6cvx9Kq1tt0Iw3sjS3bQyUODtENl9yFV8lzyEMWN+PI/qJLyPwn0ZFNG/eO5AlRgA+qPlQIDAQAB</string>
    <string name="purchase">Purchase</string>
    <string name="endAds">Tired of ads ?</string>
    <string name="purchaseNoAds">Make a one-time payment of %1$s</string>
    <string name="noMoreAds">No more ads forever</string>
    <string name="purchaseNotDone">Purchase not done</string>
    <string name="purchaseError">Error while making the payment</string>
    <string name="purchaseThx">Thanks for your purchase</string>

</resources>
