<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_add" android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/addCapsules" />
        <item android:id="@+id/nav_export" android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/exportCapsules" />
        <item android:id="@+id/nav_order" android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/order" />
        <item android:id="@+id/nav_rate" android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rate_app" />
        <item android:id="@+id/nav_billing" android:icon="@drawable/ic_money_off_black_24dp"
            android:title="@string/endAds" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/com_facebook_button_icon"
                android:title="@string/share_fb" />
        </menu>
    </item>

</menu>
